<resources>
	<string name="app_name">QRtools</string>
    <string name="long_press_to_copy_result">长按复制结果</string>
    <string name="input_text">输入文字</string>
    <string name="click_to_create">点击生成</string>
    <string name="click_to_select_image">点击选择图片</string>
    <string name="click_to_save">点击保存</string>
    <string name="scan_failed">扫描失败</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="automatically_pick_color_from_background_image">从图片自动选择颜色</string>
    <string name="contents">内容</string>
    <string name="makito_loves_kafuu_chino">输入文字</string>
    <string name="size_px_includes_the_margin_width_equals_to_height">大小(单位为像素,包含内内边框,宽高相等)</string>
    <string name="margin_px">内边距 (像素)</string>
    <string name="data_dot_scale_0_lt_scale_lt_1_0f"><![CDATA[数据点缩放 (0 < 数值 < 1.0f)]]></string>
    <string name="_800">800</string>
    <string name="_20">20</string>
    <string name="_0_3">0.3</string>
    <string name="colordark_true_dots_dddddd">暗点颜色 (真值点, #rrggbb)</string>
    <string name="colordark">#000000</string>
    <string name="colorlight_false_dots_dddddd">亮点颜色 (假值点, #rrggbb)</string>
    <string name="colorlight">#ffffff</string>
    <string name="select_background_image">选择背景图</string>
    <string name="remove_background_image">移除背景图</string>
    <string name="white_margin_on_background_image">给图片添加白色边框</string>
    <string name="binarize_background_image">二进制颜色图片(黑白图片)</string>
    <string name="binarizethreshold_0_lt_threshold_lt_255"><![CDATA[转换阀值 (0 < 值 < 255)]]></string>
    <string name="generate">生成</string>
    <string name="_128">128</string>
    <string name="Error_occurred_please_check_your_configs">发生错误,请检查参数设置</string>
    <string name="Makito_loves_Kafuu_Chino">示例内容</string>
    <string name="Background_image_removed">背景图移除成功</string>
    <string name="Background_image_added">背景图添加成功</string>
    <string name="Failed_to_add_the_background_image">背景图添加失败</string>
    <string name="generating">生成中</string>
</resources>
