<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/contents" />

            <EditText
                android:id="@+id/contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/makito_loves_kafuu_chino"
                android:maxLines="3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/size_px_includes_the_margin_width_equals_to_height" />

            <EditText
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_800"
                android:inputType="number"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/margin_px" />

            <EditText
                android:id="@+id/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_20"
                android:inputType="number"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/data_dot_scale_0_lt_scale_lt_1_0f" />

            <EditText
                android:id="@+id/dotScale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_0_3"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />


            <CheckBox
                android:id="@+id/autoColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/automatically_pick_color_from_background_image" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/colordark_true_dots_dddddd" />

            <EditText
                android:id="@+id/colorDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/colordark"
				android:text="@string/colordark"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/colorlight_false_dots_dddddd" />

            <EditText
                android:id="@+id/colorLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/colorlight"
				android:text="@string/colorlight"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/backgroundImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_background_image" />

            <Button
                android:id="@+id/removeBackgroundImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_background_image" />

            <CheckBox
                android:id="@+id/whiteMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/white_margin_on_background_image" />

            <CheckBox
                android:id="@+id/binarize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/binarize_background_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/binarizethreshold_0_lt_threshold_lt_255" />

            <EditText
                android:id="@+id/binarizeThreshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/_128"
                android:inputType="number"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/generate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generate" />

            <Button
				android:visibility="gone"
                android:id="@+id/awesomeqr_mainButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_save" />

            <ImageView
                android:id="@+id/qrcode"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerInside" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
